--- a/Project2/WebContent/WEB-INF/web.xml
+++ b/Project2/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+  		<servlet-name>BoardFrontController</servlet-name>
+  		<servlet-class>com.chaca.review.action.BoardFrontController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  		<servlet-name>BoardFrontController</servlet-name>
+  		<url-pattern>*.bo</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
